Fix all unnecessary showing of scrollbars (#1326)
General note, pretty much always you should be using auto instead of
scroll

--- a/client/src/app/deck/deck.module.scss
+++ b/client/src/app/deck/deck.module.scss
@@ -693,7 +693,7 @@
 		background-color: var(--gray-800);
 		border-left: solid 2px black;
 		height: 100%;
-		overflow: scroll;
+		overflow: auto;
 	}
 
 	.mobileDeckPreview {
