--- a/client/src/app/main-menu/achievements.module.scss
+++ b/client/src/app/main-menu/achievements.module.scss
@@ -69,7 +69,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.5vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 	height: 100%;
 }
 
@@ -82,7 +82,7 @@
 
 .cosmeticsContainerContainer {
 	height: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .cosmetics {
